--- a/comp.html
+++ b/comp.html
@@ -26,10 +26,10 @@
         <script src="libraries/p5.sound.js" type="text/javascript"></script>
         <script src="libraries/p5.dom.js" type="text/javascript"></script>
         <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script>
-        <script src="libraries/pace.min.js" type="text/javascript"></script>
 
         <link rel="stylesheet" type="text/css" href="css/comp.css">
         <link rel="stylesheet" type="text/css" href="css/pace.css" charset="utf-8" />
+        <script src="libraries/pace.min.js" type="text/javascript"></script>
         <!-- <link rel="stylesheet" href="libraries/dist/css/lightbox.css"> -->
         <!-- <script src="libraries/dist/js/lightbox.js"></script> -->
 
@@ -45,7 +45,8 @@
         <div class="wrapper">
             <header>
                 <div class = "dataImg">
-                    <img class = "dataCompImg" src="assets/sketch02_imgs/ura_data_02.png"">
+                    <!-- <img class = "dataCompImg" src="assets/sketch02_imgs/ura_data_02.png""> -->
+                    <img class = "dataCompImg" src="assets/image/mv.jp2">
                 </div>
             </header>
             <main>
