--- a/index.html
+++ b/index.html
@@ -79,41 +79,59 @@
                     <p class="roundText">ura geikou sai 2019</p>
                     <p class="p-margin"> </p>
                     <div class="memberBox">
-                        <div class="member01">
+                        <!-- <div class="member01">
                             <a href="assets/member/member_01b.jp2" data-lightbox="m-image01"><img class = "memberImg" src="assets/member/member_01a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member02">
                             <a href="assets/member/member_02b.jp2" data-lightbox="m-image02"><img class = "memberImg" src="assets/member/member_02a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
                             <a href="assets/member/member_03b.jp2" data-lightbox="m-image03"><img class = "memberImg" src="assets/member/member_03a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
                             <a href="assets/member/member_04b.jp2" data-lightbox="m-image04"><img class = "memberImg" src="assets/member/member_04a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member02">
                             <a href="assets/member/member_05b.jp2" data-lightbox="m-image05"><img class = "memberImg" src="assets/member/member_05a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
                             <a href="assets/member/member_06b.jp2" data-lightbox="m-image06"><img class = "memberImg" src="assets/member/member_06a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
                             <a href="assets/member/member_07b.jp2" data-lightbox="m-image07"><img class = "memberImg" src="assets/member/member_07a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member02">
                             <a href="assets/member/member_08b.jp2" data-lightbox="m-image08"><img class = "memberImg" src="assets/member/member_08a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
                             <a href="assets/member/member_09b.jp2" data-lightbox="m-image09"><img class = "memberImg" src="assets/member/member_09a.jp2"></a>
-                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div> -->
+                        <div class="member01">
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_01b.jp2" data-lightbox="m-image01"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_01a.jp2"></a>
+                        </div>
+                        <div class="member02">
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_02b.jp2" data-lightbox="m-image02"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_02a.jp2"></a>
+                        </div>
+                        <div class="member01">
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_03b.jp2" data-lightbox="m-image03"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_03a.jp2"></a>
+                        </div>
+                        <div class="member01">
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_04b.jp2" data-lightbox="m-image04"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_04a.jp2"></a>
+                        </div>
+                        <div class="member02">
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_05b.jp2" data-lightbox="m-image05"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_05a.jp2"></a>
+                        </div>
+                        <div class="member01">
+                            <a href=https://nekoshiro046.github.io/uraImg/member/member_06b.jp2" data-lightbox="m-image06"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_06a.jp2"></a>
+                        </div>
+                        <div class="member01">
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_07b.jp2" data-lightbox="m-image07"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_07a.jp2"></a>
+                        </div>
+                        <div class="member02">
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_08b.jp2" data-lightbox="m-image08"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_08a.jp2"></a>
+                        </div>
+                        <div class="member01">
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_09b.jp2" data-lightbox="m-image09"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_09a.jp2"></a>
                         </div>
                     </div>
 
