--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.js"></script> -->
         <script src="libraries/p5.js" type="text/javascript"></script>
-        <script src="libraries/p5.sound.js" type="text/javascript"></script>
-        <script src="libraries/p5.dom.js" type="text/javascript"></script>
+        <!-- <script src="libraries/p5.sound.js" type="text/javascript"></script> -->
+        <!-- <script src="libraries/p5.dom.js" type="text/javascript"></script> -->
         <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="libraries/dist/css/lightbox.css">
-        <script src="libraries/dist/js/lightbox.js"></script>
+        <link rel="stylesheet" href="libraries/dist/css/lightbox.min.css">
+        <script src="libraries/dist/js/lightbox.min.js"></script>
 
         <!-- <script   src="https://code.jquery.com/jquery-3.4.1.js"></script> -->
         <!-- <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script> -->
@@ -122,7 +122,7 @@
                             <a href="https://nekoshiro046.github.io/uraImg/member/member_05b.jp2" data-lightbox="m-image05"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_05a.jp2"></a>
                         </div>
                         <div class="member01">
-                            <a href=https://nekoshiro046.github.io/uraImg/member/member_06b.jp2" data-lightbox="m-image06"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_06a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_06b.jp2" data-lightbox="m-image06"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_06a.jp2"></a>
                         </div>
                         <div class="member01">
                             <a href="https://nekoshiro046.github.io/uraImg/member/member_07b.jp2" data-lightbox="m-image07"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_07a.jp2"></a>
