--- a/comp.html
+++ b/comp.html
@@ -22,10 +22,11 @@
         <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.js"></script> -->
-        <script src="libraries/p5.js" type="text/javascript"></script>
+        <!-- <script src="libraries/p5.js" type="text/javascript"></script>
         <script src="libraries/p5.sound.js" type="text/javascript"></script>
         <script src="libraries/p5.dom.js" type="text/javascript"></script>
-        <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script>
+        <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script> -->
+        <script src="libraries/mainLibraries.js" type="text/javascript"></script>
 
         <link rel="stylesheet" type="text/css" href="css/comp.css">
         <link rel="stylesheet" type="text/css" href="css/pace.css" charset="utf-8" />
