--- a/index.html
+++ b/index.html
@@ -24,20 +24,17 @@
         <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.js"></script> -->
-        <script src="libraries/p5.js" type="text/javascript"></script>
+        <!-- <script src="libraries/p5.js" type="text/javascript"></script> -->
         <!-- <script src="libraries/p5.sound.js" type="text/javascript"></script> -->
         <!-- <script src="libraries/p5.dom.js" type="text/javascript"></script> -->
-        <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script>
+        <!-- <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script> -->
+        <script src="libraries/mainLibraries.js" type="text/javascript"></script>
         <link rel="stylesheet" href="libraries/dist/css/lightbox.min.css">
         <script src="libraries/dist/js/lightbox.min.js"></script>
 
         <!-- <script   src="https://code.jquery.com/jquery-3.4.1.js"></script> -->
         <!-- <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script> -->
 
-        <!-- <script type="text/javascript" src="js/template.js"></script> -->
-        <!-- <script src="js/sketch.js"></script> -->
-        <!-- <script src="js/ura_Sketch.js"></script>
-     -->
     </head>
     <body>
     	<div class="wrapper">
@@ -212,9 +209,7 @@
                 
             </div>
         </footer>
-	<!-- <script src="js/sketch.js"></script> -->
     <script src="js/ura_Sketch.js"></script>
-    <!-- <script src="js/ura_Sketch02.js"></script> -->
 	</div>
     </body>
     </html> 
