--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
                     <!-- <h3>-ABOUT URA-</h3> -->
                     <h3><img class = "headingImg" src="assets/image/ura_aboutura.jp2"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
-                    <p class="p-margin">我々は裏芸工生である。</p>
-                    <p>幹部と部署長だけしかテーマの選定に関われず、俺たち関係ない人間はいつも蚊帳の外だった。<br>
-                    だけど、楽しみにさせることはできなくとも『楽しみにする』ことはできる。そう自分たちに言い聞かせていたんだ。だが、それも許されなかった、奴らはテーマやメインビジュアルに関する仕事を何も隠さずに目の前で始めたんだ！楽しみにしたかったが、事前に知る羽目になった。我々は楽しみにさせることも楽しみにすることも許させなかった…</p>
+                    <p class="p-margin"></p>
+                    <p>URA またの名を裏芸工祭<br>
+					今年で五代目にあたる裏芸工祭長インパクトの芸工祭に対する怨念にも似た感情から発足した組織である。
+					今までの裏芸工祭が為せなかった悲願を達成し裏の存在を世に知らしめるべく
+					歴代最大勢力を以て芸工を侵食する。</p>
                 </div>
 
                 <div class="p-box">
