--- a/comp.html
+++ b/comp.html
@@ -47,7 +47,9 @@
             <header>
                 <div class = "dataImg">
                     <!-- <img class = "dataCompImg" src="assets/sketch02_imgs/ura_data_02.png""> -->
-                    <img class = "dataCompImg" src="assets/image/mv.jp2">
+                    <dv id = "imgBox">
+                    <img class = "dataCompImg" src="https://nekoshiro046.github.io/uraImg/sketch02_imgs/jacked.jp2">
+                    </dv>
                 </div>
             </header>
             <main>
