--- a/index.html
+++ b/index.html
@@ -173,18 +173,18 @@
 
                 <div class="p-box">
                     <!-- <h3>-GOODS-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_goods.jp2"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg/image/ura_goods.jp2"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <div class="goods-container">
                         <div class="goods">
-                            <a href="assets/image/goods01.jpg" data-lightbox="goods01">
-                            <img class = "goodsImg" src="assets/image/goods01.jpg">
+                            <a href="https://nekoshiro046.github.io/uraImg/image/goods01.jpg" data-lightbox="goods01">
+                            <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/goods01.jpg">
                             <p>Can batch</p>
                             </a>
                         </div>
                         <div class="goods">
-                            <a href="assets/image/goods01.jpg" data-lightbox="goods02">
-                            <img class = "goodsImg" src="assets/image/goods01.jpg">
+                            <a href="https://nekoshiro046.github.io/uraImg//image/goods01.jpg" data-lightbox="goods02">
+                            <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/goods01.jpg">
                             <p>UR-α</p>
                             </a>
                         </div>
