--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                     <p class="roundText">ura geikou sai 2019</p>
                     <div class="goods-container">
                         <div class="goods">
-                            <a href="https://nekoshiro046.github.io/uraImg/image/goods01.jpg" data-lightbox="goods01">
-                            <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/goods01.jpg">
+                            <a href="https://nekoshiro046.github.io/uraImg/image/canbatch02.png" data-lightbox="goods01">
+                            <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/canbatch01.jpg">
                             <p>Can batch</p>
                             </a>
                         </div>
                         <div class="goods">
-                            <a href="https://nekoshiro046.github.io/uraImg//image/goods01.jpg" data-lightbox="goods02">
+                            <a href="https://nekoshiro046.github.io/uraImg/image/goods01.jpg" data-lightbox="goods02">
                             <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/goods01.jpg">
                             <p>UR-α</p>
                             </a>
