--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                             </a>
                         </div>
                         <div class="goods">
-                            <a href="https://nekoshiro046.github.io/uraImg/image/goods01.jpg" data-lightbox="goods02">
-                            <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/goods01.jpg">
+                            <a href="https://nekoshiro046.github.io/uraImg/image/α02.jp2" data-lightbox="goods02">
+                            <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/α01.jp2">
                             <p>UR-α</p>
                             </a>
                         </div>
