--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         </div>
                         <div class="goods">
                             <a href="https://nekoshiro046.github.io/uraImg/image/α02.jp2" data-lightbox="goods02">
-                            <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/α01.jp2">
+                            <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/α01.png">
                             <p>UR-α</p>
                             </a>
                         </div>
