--- a/index.html
+++ b/index.html
@@ -179,13 +179,17 @@
                         <div class="goods">
                             <a href="https://nekoshiro046.github.io/uraImg/image/canbatch02.png" data-lightbox="goods01">
                             <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/canbatch01.jpg">
-                            <p>Can batch</p>
+                            <p>Can batch<br>
+                                ¥100
+                            </p>
                             </a>
                         </div>
                         <div class="goods">
                             <a href="https://nekoshiro046.github.io/uraImg/image/α02.jp2" data-lightbox="goods02">
                             <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/α01.png">
-                            <p>UR-α</p>
+                            <p>UR-α(レプリカ)<br>
+                                ¥200
+                            </p>
                             </a>
                         </div>
                     </div>
