--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta property="og:title" content="URA GEIKO SAI" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://nekoshiro046.github.io/uraGeikoTest/" />
-        <meta property="og:image" content="assets/image/ura.png" />
+        <meta property="og:image" content="https://nekoshiro046.github.io/uraImg/image/ura.png" />
         <meta property="og:description" content="裏芸工祭サイト。" />
         <meta property="og:site_name" content="URA GEIKO SAI" />
         <!-- <link type="image/png" rel="shortcut icon" href="assets/image/icon.png"> -->
@@ -45,11 +45,11 @@
             <!-- <div class="header"> -->
             <!-- <h1 class="title">URA GEIKO SAI</h1> -->
             <a href="index.html"  class="title">
-            <img class = "titleImg" src="assets/image/ura_title.jp2"">
+            <img class = "titleImg" src="https://nekoshiro046.github.io/uraImg//image/ura_title.png"">
             </a>
 
             <div class = "headerLogoBox">
-                <img class = "headerLogoImg" src="assets/image/ura_logo.jp2"">
+                <img class = "headerLogoImg" src="https://nekoshiro046.github.io/uraImg//image/ura_logo.png"">
             </div>
             <!-- </div> -->
         </header>
@@ -63,7 +63,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-ABOUT URA-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_aboutura.jp2"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg//image/ura_aboutura.png"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <p class="p-margin"></p>
                     <p>URA またの名を裏芸工祭<br>
@@ -74,63 +74,63 @@
 
                 <div class="p-box">
                     <!-- <h3>-MEMBER-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_member.jp2"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg//image/ura_member.png"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <p class="p-margin"> </p>
                     <div class="memberBox">
                         <!-- <div class="member01">
-                            <a href="assets/member/member_01b.jp2" data-lightbox="m-image01"><img class = "memberImg" src="assets/member/member_01a.jp2"></a>
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image01"><img class = "memberImg" src="assets/member/member_01a.png"></a>
                         </div>
                         <div class="member02">
-                            <a href="assets/member/member_02b.jp2" data-lightbox="m-image02"><img class = "memberImg" src="assets/member/member_02a.jp2"></a>
+                            <a href="assets/member/member_02b.png" data-lightbox="m-image02"><img class = "memberImg" src="assets/member/member_02a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_03b.jp2" data-lightbox="m-image03"><img class = "memberImg" src="assets/member/member_03a.jp2"></a>
+                            <a href="assets/member/member_03b.png" data-lightbox="m-image03"><img class = "memberImg" src="assets/member/member_03a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_04b.jp2" data-lightbox="m-image04"><img class = "memberImg" src="assets/member/member_04a.jp2"></a>
+                            <a href="assets/member/member_04b.png" data-lightbox="m-image04"><img class = "memberImg" src="assets/member/member_04a.png"></a>
                         </div>
                         <div class="member02">
-                            <a href="assets/member/member_05b.jp2" data-lightbox="m-image05"><img class = "memberImg" src="assets/member/member_05a.jp2"></a>
+                            <a href="assets/member/member_05b.png" data-lightbox="m-image05"><img class = "memberImg" src="assets/member/member_05a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_06b.jp2" data-lightbox="m-image06"><img class = "memberImg" src="assets/member/member_06a.jp2"></a>
+                            <a href="assets/member/member_06b.png" data-lightbox="m-image06"><img class = "memberImg" src="assets/member/member_06a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_07b.jp2" data-lightbox="m-image07"><img class = "memberImg" src="assets/member/member_07a.jp2"></a>
+                            <a href="assets/member/member_07b.png" data-lightbox="m-image07"><img class = "memberImg" src="assets/member/member_07a.png"></a>
                         </div>
                         <div class="member02">
-                            <a href="assets/member/member_08b.jp2" data-lightbox="m-image08"><img class = "memberImg" src="assets/member/member_08a.jp2"></a>
+                            <a href="assets/member/member_08b.png" data-lightbox="m-image08"><img class = "memberImg" src="assets/member/member_08a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_09b.jp2" data-lightbox="m-image09"><img class = "memberImg" src="assets/member/member_09a.jp2"></a>
+                            <a href="assets/member/member_09b.png" data-lightbox="m-image09"><img class = "memberImg" src="assets/member/member_09a.png"></a>
                         </div> -->
                         <div class="member01">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_01b.jp2" data-lightbox="m-image01"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_01a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_01b.png" data-lightbox="m-image01"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_01a.png"></a>
                         </div>
                         <div class="member02">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_02b.jp2" data-lightbox="m-image02"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_02a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_02b.png" data-lightbox="m-image02"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_02a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_03b.jp2" data-lightbox="m-image03"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_03a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_03b.png" data-lightbox="m-image03"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_03a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_04b.jp2" data-lightbox="m-image04"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_04a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_04b.png" data-lightbox="m-image04"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_04a.png"></a>
                         </div>
                         <div class="member02">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_05b.jp2" data-lightbox="m-image05"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_05a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_05b.png" data-lightbox="m-image05"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_05a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_06b.jp2" data-lightbox="m-image06"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_06a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_06b.png" data-lightbox="m-image06"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_06a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_07b.jp2" data-lightbox="m-image07"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_07a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_07b.png" data-lightbox="m-image07"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_07a.png"></a>
                         </div>
                         <div class="member02">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_08b.jp2" data-lightbox="m-image08"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_08a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_08b.png" data-lightbox="m-image08"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_08a.png"></a>
                         </div>
                         <div class="member01">
-                            <a href="https://nekoshiro046.github.io/uraImg/member/member_09b.jp2" data-lightbox="m-image09"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_09a.jp2"></a>
+                            <a href="https://nekoshiro046.github.io/uraImg/member/member_09b.png" data-lightbox="m-image09"><img class = "memberImg" src="https://nekoshiro046.github.io/uraImg/member/member_09a.png"></a>
                         </div>
                     </div>
 
@@ -138,7 +138,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-MOVIE-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_movie.jp2"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg//image/ura_movie.png"></h3>
                     <p class="roundText"">ura geikou sai 2019</p>
                     <p class="p-margin"> </p>
                     <div id = "mov" >
@@ -176,7 +176,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-GOODS-</h3> -->
-                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg/image/ura_goods.jp2"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg/image/ura_goods.png"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <div class="goods-container">
                         <div class="goods">
@@ -188,7 +188,7 @@
                             </a>
                         </div>
                         <div class="goods">
-                            <a href="https://nekoshiro046.github.io/uraImg/image/α02.jp2" data-lightbox="goods02">
+                            <a href="https://nekoshiro046.github.io/uraImg/image/α02.png" data-lightbox="goods02">
                             <img class = "goodsImg" src="https://nekoshiro046.github.io/uraImg/image/α01.png">
                             <p>UR-α(レプリカ)<br>
                                 ¥200
@@ -202,11 +202,11 @@
 
                 <div class="p-box">
                     <!-- <h3>-BACK TO OMOTE-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_backtoomote.jp2"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg//image/ura_backtoomote.png"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <!-- <a href="https://geikousai-ncu.com"> -->
                     <a href="comp.html">
-                    <img class = "backImg" src="assets/image/omote.jp2"">
+                    <img class = "backImg" src="https://nekoshiro046.github.io/uraImg//image/omote.png"">
                     </a>
                 </div>
             </div>
