--- a/comp.html
+++ b/comp.html
@@ -48,7 +48,7 @@
                 <div class = "dataImg">
                     <!-- <img class = "dataCompImg" src="assets/sketch02_imgs/ura_data_02.png""> -->
                     <dv id = "imgBox">
-                    <img class = "dataCompImg" src="https://nekoshiro046.github.io/uraImg/sketch02_imgs/jacked.jp2">
+                    <img class = "dataCompImg" src="https://nekoshiro046.github.io/uraImg/sketch02_imgs/jacked.png">
                     </dv>
                 </div>
             </header>
