--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <!-- <div class="header"> -->
             <!-- <h1 class="title">URA GEIKO SAI</h1> -->
             <a href="index.html"  class="title">
-            <img class = "titleImg" src="https://nekoshiro046.github.io/uraImg//image/ura_title.png"">
+            <img class = "titleImg" src="https://nekoshiro046.github.io/uraImg/image/ura_title.png"">
             </a>
 
             <div class = "headerLogoBox">
-                <img class = "headerLogoImg" src="https://nekoshiro046.github.io/uraImg//image/ura_logo.png"">
+                <img class = "headerLogoImg" src="https://nekoshiro046.github.io/uraImg/image/ura_logo.png"">
             </div>
             <!-- </div> -->
         </header>
@@ -63,7 +63,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-ABOUT URA-</h3> -->
-                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg//image/ura_aboutura.png"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg/image/ura_aboutura.png"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <p class="p-margin"></p>
                     <p>URA またの名を裏芸工祭<br>
@@ -74,7 +74,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-MEMBER-</h3> -->
-                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg//image/ura_member.png"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg/image/ura_member.png"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <p class="p-margin"> </p>
                     <div class="memberBox">
@@ -138,7 +138,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-MOVIE-</h3> -->
-                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg//image/ura_movie.png"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg/image/ura_movie.png"></h3>
                     <p class="roundText"">ura geikou sai 2019</p>
                     <p class="p-margin"> </p>
                     <div id = "mov" >
@@ -202,11 +202,11 @@
 
                 <div class="p-box">
                     <!-- <h3>-BACK TO OMOTE-</h3> -->
-                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg//image/ura_backtoomote.png"></h3>
+                    <h3><img class = "headingImg" src="https://nekoshiro046.github.io/uraImg/image/ura_backtoomote.png"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <!-- <a href="https://geikousai-ncu.com"> -->
                     <a href="comp.html">
-                    <img class = "backImg" src="https://nekoshiro046.github.io/uraImg//image/omote.png"">
+                    <img class = "backImg" src="https://nekoshiro046.github.io/uraImg/image/omote.png"">
                     </a>
                 </div>
             </div>
